fixed some spacing issues when viewing on mobile

--- a/src/components/CSS/Header.css
+++ b/src/components/CSS/Header.css
@@ -1,17 +1,27 @@
 
 .titleFont {
-    font-size: 8em;
-    padding-top: 10%;
-    width: auto;
+    font-size: 8vw;
+}
+
+.brace-image {
+    height: 12vw;
+    margin: 0;
+    padding: 0;
+}
+
+.white-dot {
+    width:auto;
+    height:10px;
+    margin-top: 10px;
 }
 
 .titleFont2 {
-    font-size: 2.5em;
+    font-size: max(2vw, 25px);
     width: auto;
 }
 
 .titleFont3 {
-    font-size: 1em;
+    font-size: 0.8vw;
     width: auto;
 }
 
@@ -25,7 +35,6 @@
     max-height: 95vh;
     padding: 0;
     margin: 0;
-    max-width: 100vw;
 }
 
 .h-20 {
@@ -69,8 +78,8 @@
     background: rgba(0, 0, 0, 0.25);
     margin: 0;
     padding: 0;
-    min-width: 100vw;
-    height: 95vh;
+    min-width: 100%;
+    height: 100%;
 }
 
 .curly-brace {
